--- a/common/src/main/res/layout/bundle.xml
+++ b/common/src/main/res/layout/bundle.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal">
 
     <FrameLayout
@@ -118,4 +118,4 @@
         </FrameLayout>
     </FrameLayout>
 
-</LinearLayout>
+</merge>
