--- a/common/src/main/res/layout/test.xml
+++ b/common/src/main/res/layout/test.xml
@@ -6,6 +6,6 @@
 
     <com.sobey.common.view.BundleView
         android:layout_width="match_parent"
-        android:layout_height="200dp"/>
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
