--- a/tvcust/src/main/res/layout/activity_countorder.xml
+++ b/tvcust/src/main/res/layout/activity_countorder.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/sb_bk"
     android:fitsSystemWindows="true"
     tools:context="com.sobey.tvcust.ui.activity.CountOrderActivity">
 
@@ -28,39 +29,78 @@
         android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <com.flyco.tablayout.CommonTabLayout
-            android:id="@+id/tl_8"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:background="#6D8FB0"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            app:tl_iconVisible="false"
-            app:tl_indicator_margin_left="5dp"
-            app:tl_indicator_margin_right="5dp"
-            app:tl_indicator_style="BLOCK"
-            app:tl_textsize="14sp"/>
+            android:layout_height="50dp"
+            android:background="@color/white"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp">
 
-        <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
-            android:id="@+id/progress_countorder"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            <ImageView
+                android:id="@+id/btn_countorder_bank"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@drawable/shape_oval_bk_dark"
+                android:padding="8dp"
+                android:src="@drawable/icon_bank" />
+
+            <TextView
+                android:id="@+id/text_countorder_time"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="2016年09月"
+                android:textColor="@color/sb_text_blank"
+                android:textSize="@dimen/text_big_nomal" />
+
+            <ImageView
+                android:id="@+id/btn_countorder_next"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@drawable/shape_oval_bk_dark"
+                android:padding="8dp"
+                android:src="@drawable/icon_next" />
+        </LinearLayout>
+
+        <RelativeLayout
+            android:id="@+id/showingroup"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            app:rcProgress="20"
-            app:rcMax="100"
-            app:rcRadius="45dp"
-            app:rcBackgroundPadding="0dp"
-            app:rcProgressColor="@color/sb_blue"
-            app:rcBackgroundColor="@color/cc_blue" />
+            android:layout_height="0dp"
+            android:layout_weight="1">
 
-        <WebView
-            android:id="@+id/web_countorder"
-            android:layout_margin="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:scrollbars="none"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="1dp"
+                    android:background="@color/white">
+
+                    <WebView
+                        android:id="@+id/web_countorder"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:layout_margin="10dp"
+                        android:scrollbars="none" />
+
+                </FrameLayout>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycle"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
+
+            </LinearLayout>
+        </RelativeLayout>
     </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
