--- a/tvcust/src/main/res/layout/activity_orderallocate.xml
+++ b/tvcust/src/main/res/layout/activity_orderallocate.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/sb_bk"
     android:fitsSystemWindows="true"
-    tools:context="com.sobey.tvcust.ui.activity.OrderDetailActivity">
+    tools:context="com.sobey.tvcust.ui.activity.OrderAllocateActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -20,32 +20,7 @@
             android:background="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
             app:navigationIcon="@drawable/icon_bank"
-            app:popupTheme="@style/AppTheme.PopupOverlay">
-
-            <LinearLayout
-                android:id="@+id/btn_go_orderprog"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:layout_marginRight="20dp"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/icon_reqfix" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
-                    android:text="查看进度"
-                    android:textColor="@color/sb_blue"
-                    android:textSize="@dimen/text_tiny" />
-
-            </LinearLayout>
-        </android.support.v7.widget.Toolbar>
+            app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -126,7 +101,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingBottom="15dp">
+                android:paddingBottom="25dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -155,37 +130,6 @@
                     android:textSize="@dimen/text_nomal_small" />
             </LinearLayout>
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@drawable/line" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingBottom="20dp"
-                android:paddingTop="15dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:text="处理人：李师傅"
-                    android:textColor="@color/sb_text_blank"
-                    android:textSize="@dimen/text_nomal" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="5dp"
-                    android:text="电话：15632458965"
-                    android:textColor="@color/sb_text_dark_blank"
-                    android:textSize="@dimen/text_nomal_small" />
-
-            </LinearLayout>
-
         </LinearLayout>
 
     </android.support.design.widget.AppBarLayout>
@@ -204,10 +148,12 @@
             android:layout_weight="1">
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycle_orderdetail"
+                android:id="@+id/recycle_orderallocate"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:clipToPadding="false"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
                 android:paddingBottom="10dp" />
 
         </android.support.v4.widget.SwipeRefreshLayout>
@@ -220,7 +166,7 @@
             android:layout_marginRight="10dp"
             android:background="@color/sb_bk_dark"
             android:gravity="center"
-            android:text="接受任务"
+            android:text="分配任务"
             android:textColor="@color/white"
             android:textSize="@dimen/text_big" />
 
