--- a/tvcust/src/main/res/layout/activity_orderdetail.xml
+++ b/tvcust/src/main/res/layout/activity_orderdetail.xml
@@ -34,7 +34,7 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/icon_reqfix" />
+                    android:src="@drawable/icon_allocate_orderprog" />
 
                 <TextView
                     android:layout_width="wrap_content"
