--- a/tvcust/src/main/res/layout/activity_version.xml
+++ b/tvcust/src/main/res/layout/activity_version.xml
@@ -34,7 +34,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginTop="30dp"
-            android:src="@drawable/me_header_defalt" />
+            android:src="@drawable/applogo" />
 
         <TextView
             android:id="@+id/version_vname"
