--- a/tvcust/src/main/res/layout/dialog_server.xml
+++ b/tvcust/src/main/res/layout/dialog_server.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:scaleType="fitXY"
-            android:src="@drawable/login_bk"/>
+            android:src="@drawable/bk_server"/>
 
         <ImageView
             android:layout_width="60dp"
