--- a/tvcust/src/main/res/layout/activity_reqfix.xml
+++ b/tvcust/src/main/res/layout/activity_reqfix.xml
@@ -127,7 +127,7 @@
 
         </LinearLayout>
 
-        <com.sobey.common.view.BundleView
+        <com.sobey.common.view.BundleView2
             android:id="@+id/bundle_reqfix"
             android:layout_width="match_parent"
             android:layout_height="0dp"
