net reqfix orderlist

--- a/tvcust/src/main/res/layout/activity_modifypsw.xml
+++ b/tvcust/src/main/res/layout/activity_modifypsw.xml
@@ -42,6 +42,7 @@
                     android:layout_marginRight="20dp"
                     android:drawableLeft="@drawable/icon_login_phone"
                     android:drawablePadding="20dp"
+                    android:maxLength="11"
                     android:hint="手机号"
                     android:inputType="textPersonName"/>
 
@@ -66,6 +67,7 @@
                         android:layout_marginLeft="20dp"
                         android:drawableLeft="@drawable/icon_login_vali"
                         android:drawablePadding="20dp"
+                        android:maxLength="6"
                         android:hint="验证码"
                         android:inputType="textPassword" />
 
