--- a/tvcust/src/main/res/layout/activity_medetail.xml
+++ b/tvcust/src/main/res/layout/activity_medetail.xml
@@ -116,6 +116,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginRight="20dp"
                             android:layout_weight="1"
+                            android:maxLength="16"
                             android:background="@drawable/none"
                             android:gravity="right"
                             android:singleLine="true"
@@ -180,6 +181,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginRight="20dp"
                             android:layout_weight="1"
+                            android:maxLength="32"
                             android:background="@drawable/none"
                             android:gravity="right"
                             android:singleLine="true"
