--- a/tvcust/src/main/res/layout/activity_question.xml
+++ b/tvcust/src/main/res/layout/activity_question.xml
@@ -23,21 +23,29 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <com.liaoinstan.springview.widget.SpringView
+    <LinearLayout
+        android:id="@+id/showingroup"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:footer="@layout/header_common"
-        app:header="@layout/header_common"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        app:type="follow">
+        android:orientation="vertical"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycle_question"
+        <com.liaoinstan.springview.widget.SpringView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingTop="10dp"
-            android:paddingBottom="20dp"
-            android:clipToPadding="false"/>
-    </com.liaoinstan.springview.widget.SpringView>
+            app:footer="@layout/header_common"
+            app:header="@layout/header_common"
+            app:type="follow">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycle_question"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clipToPadding="false"
+                android:paddingBottom="20dp"
+                android:paddingTop="10dp" />
+        </com.liaoinstan.springview.widget.SpringView>
+
+    </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
