--- a/tvcust/src/main/res/layout/fragment_regist_detail.xml
+++ b/tvcust/src/main/res/layout/fragment_regist_detail.xml
@@ -45,6 +45,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
                         android:layout_marginLeft="10dp"
+                        android:maxLength="16"
                         android:inputType="textPersonName" />
 
                 </LinearLayout>
@@ -76,6 +77,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
                         android:layout_marginLeft="10dp"
+                        android:maxLength="16"
                         android:inputType="textPassword" />
 
                 </LinearLayout>
@@ -107,6 +109,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
                         android:layout_marginLeft="10dp"
+                        android:maxLength="16"
                         android:inputType="textPassword" />
 
                 </LinearLayout>
@@ -138,6 +141,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
                         android:layout_marginLeft="10dp"
+                        android:maxLength="32"
                         android:inputType="textPersonName" />
 
                 </LinearLayout>
