--- a/tvcust/src/main/res/layout/item_recycle_question.xml
+++ b/tvcust/src/main/res/layout/item_recycle_question.xml
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginLeft="10dp"
-            android:text="硬件问题" />
+            android:text="问题" />
 
         <ImageView
             android:layout_width="wrap_content"
