--- a/tvcust/src/main/res/layout/fragment_me.xml
+++ b/tvcust/src/main/res/layout/fragment_me.xml
@@ -621,7 +621,7 @@
                             android:id="@+id/item_me_order"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
-                            android:background="@drawable/hot_lay_item_white_fade"
+                            android:foreground="?attr/selectableItemBackground"
                             android:drawableLeft="@drawable/icon_me_order"
                             android:drawablePadding="20dp"
                             android:gravity="center_vertical"
@@ -638,7 +638,7 @@
                             android:id="@+id/item_me_question"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
-                            android:background="@drawable/hot_lay_item_white_fade"
+                            android:foreground="?attr/selectableItemBackground"
                             android:drawableLeft="@drawable/icon_me_question"
                             android:drawablePadding="20dp"
                             android:gravity="center_vertical"
@@ -655,7 +655,7 @@
                             android:id="@+id/item_me_warning"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
-                            android:background="@drawable/hot_lay_item_white_fade"
+                            android:foreground="?attr/selectableItemBackground"
                             android:drawableLeft="@drawable/icon_me_version"
                             android:drawablePadding="20dp"
                             android:gravity="center_vertical"
@@ -678,7 +678,7 @@
                         android:id="@+id/item_me_setting"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
-                        android:background="@drawable/hot_lay_item_white_fade"
+                        android:foreground="?attr/selectableItemBackground"
                         android:drawableLeft="@drawable/icon_me_setting"
                         android:drawablePadding="20dp"
                         android:gravity="center_vertical"
