--- a/tvcust/src/main/res/layout/activity_setting.xml
+++ b/tvcust/src/main/res/layout/activity_setting.xml
@@ -44,7 +44,7 @@
                     android:id="@+id/item_setting_about"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:background="@drawable/hot_lay_item_white_fade"
+                    android:foreground="?attr/selectableItemBackground"
                     android:drawableLeft="@drawable/icon_me_about"
                     android:drawablePadding="20dp"
                     android:gravity="center_vertical"
@@ -61,7 +61,7 @@
                     android:id="@+id/item_setting_clause"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:background="@drawable/hot_lay_item_white_fade"
+                    android:foreground="?attr/selectableItemBackground"
                     android:drawableLeft="@drawable/icon_me_clause"
                     android:drawablePadding="20dp"
                     android:gravity="center_vertical"
@@ -78,7 +78,7 @@
                     android:id="@+id/item_setting_version"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:background="@drawable/hot_lay_item_white_fade"
+                    android:foreground="?attr/selectableItemBackground"
                     android:orientation="horizontal">
 
                     <TextView
@@ -124,7 +124,7 @@
                     android:id="@+id/item_setting_safe"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:background="@drawable/hot_lay_item_white_fade"
+                    android:foreground="?attr/selectableItemBackground"
                     android:drawableLeft="@drawable/icon_me_safe"
                     android:drawablePadding="20dp"
                     android:gravity="center_vertical"
@@ -141,7 +141,7 @@
                     android:id="@+id/item_setting_clear"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:background="@drawable/hot_lay_item_white_fade"
+                    android:foreground="?attr/selectableItemBackground"
                     android:orientation="horizontal">
 
                     <TextView
@@ -182,7 +182,7 @@
                 android:id="@+id/item_setting_logout"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:background="@drawable/hot_lay_item_white_fade"
+                android:foreground="?attr/selectableItemBackground"
                 android:drawableLeft="@drawable/icon_me_logout"
                 android:drawablePadding="20dp"
                 android:gravity="center_vertical"
